checkpoint progress on merkle tree transfers and partial spans